ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weave-frontend
spec:
  selector:
    app: weave-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: weave-backend
spec:
  selector:
    app: weave-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: weave-k8s-worker
spec:
  selector:
    app: weave-k8s-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: weave-worker
spec:
  selector:
    app: weave-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: weave-ws-relayer
spec:
  selector:
    app: weave-ws-relayer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9093
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: weave
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
