ops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: weave
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"   
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.weave.krishdev.xyz
      secretName: weave-backend-tls
    - hosts:
        - worker.weave.krishdev.xyz
      secretName: weave-worker-tls
    - hosts:
        - k8s-worker.weave.krishdev.xyz 
      secretName: weave-k8s-worker-tls
    - hosts:
        - wss.weave.krishdev.xyz
      secretName: weave-ws-relayer-tls

  rules:
    - host: weave.krishdev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-frontend
                port:
                  number: 80

    - host: api.weave.krishdev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-backend
                port:
                  number: 80
    - host: worker.weave.krishdev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-worker
                port:
                  number: 80
    - host: k8s-worker.weave.krishdev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-k8s-worker
                port:
                  number: 80

    - host: wss.weave.krishdev.xyz
      http:
        paths:
        backend:
          service:
            name: weave-ws-relayer
            port:
              number: 80
---
